--- a/H7S_CUSTOM_BOOT.ioc
+++ b/H7S_CUSTOM_BOOT.ioc
@@ -4,7 +4,7 @@ Boot.IPs=GPIO,DEBUG,RCC\:I,GPDMA1\:I,HPDMA1\:I,LINKEDLIST\:I,NVIC1\:I,SYS\:I,COR
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-ExtMemLoader.IPs=EXTMEM_LOADER\:I,EXTMEM_MANAGER\:I,GPIO
+ExtMemLoader.IPs=EXTMEM_LOADER\:I,EXTMEM_MANAGER\:I,GPIO\:I
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -92,57 +92,52 @@ Mcu.ContextNb=3
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7_APPLI
 Mcu.IP1=CORTEX_M7_BOOT
-Mcu.IP10=XSPI2
 Mcu.IP2=MEMORYMAP
 Mcu.IP3=NVIC2
 Mcu.IP4=NVIC1
 Mcu.IP5=RCC
-Mcu.IP6=SBS
-Mcu.IP7=SYS
-Mcu.IP8=UART4
-Mcu.IP9=XSPI1
-Mcu.IPNb=11
+Mcu.IP6=SYS
+Mcu.IP7=UART4
+Mcu.IP8=XSPI1
+Mcu.IP9=XSPI2
+Mcu.IPNb=10
 Mcu.Name=STM32H7S7L8HxH
 Mcu.Package=TFBGA225 HEXA SMPS
 Mcu.Pin0=PE0
 Mcu.Pin1=PG3
 Mcu.Pin10=PF0
-Mcu.Pin100=PF15
-Mcu.Pin101=PP12
-Mcu.Pin102=PP14
-Mcu.Pin103=PP2
-Mcu.Pin104=PP5
-Mcu.Pin105=PO2
-Mcu.Pin106=PP1
-Mcu.Pin107=PB11
-Mcu.Pin108=PB13
-Mcu.Pin109=PA6
+Mcu.Pin100=PP14
+Mcu.Pin101=PP2
+Mcu.Pin102=PP5
+Mcu.Pin103=PO2
+Mcu.Pin104=PP1
+Mcu.Pin105=PB11
+Mcu.Pin106=PB13
+Mcu.Pin107=PA6
+Mcu.Pin108=PB0
+Mcu.Pin109=PF14
 Mcu.Pin11=PD7
-Mcu.Pin110=PB0
-Mcu.Pin111=PF14
-Mcu.Pin112=PP11
-Mcu.Pin113=PP15
-Mcu.Pin114=PP3
-Mcu.Pin115=PO5
-Mcu.Pin116=PP0
-Mcu.Pin117=PP7
-Mcu.Pin118=PP8
-Mcu.Pin119=PB10
+Mcu.Pin110=PP11
+Mcu.Pin111=PP15
+Mcu.Pin112=PP3
+Mcu.Pin113=PO5
+Mcu.Pin114=PP0
+Mcu.Pin115=PP7
+Mcu.Pin116=PP8
+Mcu.Pin117=PB10
+Mcu.Pin118=PB1
+Mcu.Pin119=PF12
 Mcu.Pin12=PM11
-Mcu.Pin120=PB1
-Mcu.Pin121=PF12
-Mcu.Pin122=PP13
-Mcu.Pin123=PP4
-Mcu.Pin124=PO4
-Mcu.Pin125=PP6
-Mcu.Pin126=PO0
-Mcu.Pin127=PP9
-Mcu.Pin128=VP_SBS_VS-SBS
-Mcu.Pin129=VP_SYS_VS_Systick
+Mcu.Pin120=PP13
+Mcu.Pin121=PP4
+Mcu.Pin122=PO4
+Mcu.Pin123=PP6
+Mcu.Pin124=PP9
+Mcu.Pin125=VP_SYS_VS_Systick
+Mcu.Pin126=VP_XSPI1_VS_dual
+Mcu.Pin127=VP_XSPI2_VS_dual
+Mcu.Pin128=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin13=PM9
-Mcu.Pin130=VP_XSPI1_VS_dual
-Mcu.Pin131=VP_XSPI2_VS_dual
-Mcu.Pin132=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin14=PM5
 Mcu.Pin15=PM2
 Mcu.Pin16=PG0
@@ -180,64 +175,64 @@ Mcu.Pin44=PE6
 Mcu.Pin45=PE4
 Mcu.Pin46=PC13
 Mcu.Pin47=PB6
-Mcu.Pin48=PD6
-Mcu.Pin49=PG1
+Mcu.Pin48=PG1
+Mcu.Pin49=PE12
 Mcu.Pin5=PD3
-Mcu.Pin50=PE12
-Mcu.Pin51=PA13(JTMS/SWDIO)
-Mcu.Pin52=PA10
-Mcu.Pin53=PC9
-Mcu.Pin54=PC6
-Mcu.Pin55=PG14
-Mcu.Pin56=PG12
-Mcu.Pin57=PG11
-Mcu.Pin58=PE3
-Mcu.Pin59=PA8
+Mcu.Pin50=PA13(JTMS/SWDIO)
+Mcu.Pin51=PA10
+Mcu.Pin52=PC9
+Mcu.Pin53=PC6
+Mcu.Pin54=PG14
+Mcu.Pin55=PG12
+Mcu.Pin56=PG11
+Mcu.Pin57=PE3
+Mcu.Pin58=PA8
+Mcu.Pin59=PC7
 Mcu.Pin6=PD2
-Mcu.Pin60=PC7
-Mcu.Pin61=PN1
-Mcu.Pin62=PF5
-Mcu.Pin63=PG15
-Mcu.Pin64=PG13
-Mcu.Pin65=PA15(JTDI)
-Mcu.Pin66=PN3
-Mcu.Pin67=PN0
-Mcu.Pin68=PN11
-Mcu.Pin69=PF8
+Mcu.Pin60=PF5
+Mcu.Pin61=PG15
+Mcu.Pin62=PG13
+Mcu.Pin63=PA15(JTDI)
+Mcu.Pin64=PN3
+Mcu.Pin65=PN0
+Mcu.Pin66=PN11
+Mcu.Pin67=PF8
+Mcu.Pin68=PF7
+Mcu.Pin69=PN10
 Mcu.Pin7=PB8
-Mcu.Pin70=PF7
-Mcu.Pin71=PN10
-Mcu.Pin72=PN9
-Mcu.Pin73=PN2
-Mcu.Pin74=PF9
-Mcu.Pin75=PF10
-Mcu.Pin76=PN7
-Mcu.Pin77=PN6
-Mcu.Pin78=PH0-OSC_IN(PH0)
-Mcu.Pin79=PH1-OSC_OUT(PH1)
+Mcu.Pin70=PN9
+Mcu.Pin71=PN2
+Mcu.Pin72=PF9
+Mcu.Pin73=PF10
+Mcu.Pin74=PN7
+Mcu.Pin75=PN6
+Mcu.Pin76=PH0-OSC_IN(PH0)
+Mcu.Pin77=PH1-OSC_OUT(PH1)
+Mcu.Pin78=PN8
+Mcu.Pin79=PN4
 Mcu.Pin8=PE2
-Mcu.Pin80=PN8
-Mcu.Pin81=PN4
-Mcu.Pin82=PN5
-Mcu.Pin83=PC1
-Mcu.Pin84=PA2
-Mcu.Pin85=PC4
-Mcu.Pin86=PB12
-Mcu.Pin87=PD14
-Mcu.Pin88=PA0
-Mcu.Pin89=PA1
+Mcu.Pin80=PN5
+Mcu.Pin81=PC1
+Mcu.Pin82=PA2
+Mcu.Pin83=PC4
+Mcu.Pin84=PB12
+Mcu.Pin85=PD14
+Mcu.Pin86=PA0
+Mcu.Pin87=PA1
+Mcu.Pin88=PA4
+Mcu.Pin89=PA7
 Mcu.Pin9=PB5
-Mcu.Pin90=PA4
-Mcu.Pin91=PA7
-Mcu.Pin92=PF11
-Mcu.Pin93=PO3
-Mcu.Pin94=PP10
-Mcu.Pin95=PB14
-Mcu.Pin96=PB15
-Mcu.Pin97=PA3
-Mcu.Pin98=PA5
-Mcu.Pin99=PC5
-Mcu.PinsNb=133
+Mcu.Pin90=PF11
+Mcu.Pin91=PO3
+Mcu.Pin92=PP10
+Mcu.Pin93=PB14
+Mcu.Pin94=PB15
+Mcu.Pin95=PA3
+Mcu.Pin96=PA5
+Mcu.Pin97=PC5
+Mcu.Pin98=PF15
+Mcu.Pin99=PP12
+Mcu.PinsNb=129
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H7S7L8HxH
@@ -268,27 +263,27 @@ NVIC2.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label,PinAttribute
 PA0.GPIO_Label=LCD_RGB_G3
 PA0.Locked=true
-PA0.PinAttribute=Appli
+PA0.PinAttribute=Boot
 PA0.Signal=LTDC_G3
 PA1.GPIOParameters=GPIO_Label,PinAttribute
 PA1.GPIO_Label=LCD_RGB_G2
 PA1.Locked=true
-PA1.PinAttribute=Appli
+PA1.PinAttribute=Boot
 PA1.Signal=LTDC_G2
 PA10.GPIOParameters=GPIO_Label,PinAttribute
 PA10.GPIO_Label=LCD_RGB_B4
 PA10.Locked=true
-PA10.PinAttribute=Appli
+PA10.PinAttribute=Boot
 PA10.Signal=LTDC_B4
 PA11.GPIOParameters=GPIO_Label,PinAttribute
 PA11.GPIO_Label=LCD_RGB_B3
 PA11.Locked=true
-PA11.PinAttribute=Appli
+PA11.PinAttribute=Boot
 PA11.Signal=LTDC_B3
 PA12.GPIOParameters=GPIO_Label,PinAttribute
 PA12.GPIO_Label=LCD_RGB_B2
 PA12.Locked=true
-PA12.PinAttribute=Appli
+PA12.PinAttribute=Boot
 PA12.Signal=LTDC_B2
 PA13(JTMS/SWDIO).GPIOParameters=GPIO_Label
 PA13(JTMS/SWDIO).GPIO_Label=SWDIO
@@ -301,7 +296,7 @@ PA14(JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
 PA15(JTDI).GPIOParameters=GPIO_Label,PinAttribute
 PA15(JTDI).GPIO_Label=LCD_RGB_R5
 PA15(JTDI).Locked=true
-PA15(JTDI).PinAttribute=Appli
+PA15(JTDI).PinAttribute=Boot
 PA15(JTDI).Signal=LTDC_R5
 PA2.GPIOParameters=GPIO_Label,PinAttribute
 PA2.GPIO_Label=RMII_MDIO
@@ -326,7 +321,7 @@ PA5.Signal=I2S6_CK
 PA6.GPIOParameters=GPIO_Label,PinAttribute
 PA6.GPIO_Label=LCD_RGB_B7
 PA6.Locked=true
-PA6.PinAttribute=Appli
+PA6.PinAttribute=Boot
 PA6.Signal=LTDC_B7
 PA7.GPIOParameters=GPIO_Label,PinAttribute
 PA7.GPIO_Label=RMII_CRS_DV
@@ -336,12 +331,12 @@ PA7.Signal=ETH_RMII_CRS_DV
 PA8.GPIOParameters=GPIO_Label,PinAttribute
 PA8.GPIO_Label=LCD_RGB_B6
 PA8.Locked=true
-PA8.PinAttribute=Appli
+PA8.PinAttribute=Boot
 PA8.Signal=LTDC_B6
 PA9.GPIOParameters=GPIO_Label,PinAttribute
 PA9.GPIO_Label=LCD_RGB_B5
 PA9.Locked=true
-PA9.PinAttribute=Appli
+PA9.PinAttribute=Boot
 PA9.Signal=LTDC_B5
 PB0.GPIOParameters=GPIO_Label,PinAttribute
 PB0.GPIO_Label=RMII_TXD0
@@ -361,37 +356,37 @@ PB10.Signal=ETH_MII_RX_ER
 PB11.GPIOParameters=GPIO_Label,PinAttribute
 PB11.GPIO_Label=LCD_RGB_G6
 PB11.Locked=true
-PB11.PinAttribute=Appli
+PB11.PinAttribute=Boot
 PB11.Signal=LTDC_G6
 PB12.GPIOParameters=GPIO_Label,PinAttribute
 PB12.GPIO_Label=LCD_RGB_G5
 PB12.Locked=true
-PB12.PinAttribute=Appli
+PB12.PinAttribute=Boot
 PB12.Signal=LTDC_G5
 PB13.GPIOParameters=GPIO_Label,PinAttribute
 PB13.GPIO_Label=LCD_RGB_G4
 PB13.Locked=true
-PB13.PinAttribute=Appli
+PB13.PinAttribute=Boot
 PB13.Signal=LTDC_G4
 PB14.GPIOParameters=GPIO_Label,PinAttribute
 PB14.GPIO_Label=LCD_DE
 PB14.Locked=true
-PB14.PinAttribute=Appli
+PB14.PinAttribute=Boot
 PB14.Signal=LTDC_DE
 PB15.GPIOParameters=GPIO_Label,PinAttribute
 PB15.GPIO_Label=LCD_RGB_G7
 PB15.Locked=true
-PB15.PinAttribute=Appli
+PB15.PinAttribute=Boot
 PB15.Signal=LTDC_G7
 PB3(JTDO/TRACESWO).GPIOParameters=GPIO_Label,PinAttribute
 PB3(JTDO/TRACESWO).GPIO_Label=LCD_RGB_R4
 PB3(JTDO/TRACESWO).Locked=true
-PB3(JTDO/TRACESWO).PinAttribute=Appli
+PB3(JTDO/TRACESWO).PinAttribute=Boot
 PB3(JTDO/TRACESWO).Signal=LTDC_R4
 PB4(NJTRST).GPIOParameters=GPIO_Label,PinAttribute
 PB4(NJTRST).GPIO_Label=LCD_RGB_R3
 PB4(NJTRST).Locked=true
-PB4(NJTRST).PinAttribute=Appli
+PB4(NJTRST).PinAttribute=Boot
 PB4(NJTRST).Signal=LTDC_R3
 PB5.GPIOParameters=GPIO_Label,PinAttribute
 PB5.GPIO_Label=I2S_SDO
@@ -513,7 +508,6 @@ PD5.GPIO_Label=DCMI_PIXCLK
 PD5.Locked=true
 PD5.PinAttribute=Appli
 PD5.Signal=DCMIPP_PIXCLK
-PD6.Locked=true
 PD7.GPIOParameters=GPIO_Label,PinAttribute
 PD7.GPIO_Label=RMII_REF_CLK
 PD7.Locked=true
@@ -532,7 +526,7 @@ PE1.Signal=DCMIPP_D3
 PE11.GPIOParameters=GPIO_Label,PinAttribute
 PE11.GPIO_Label=LCD_VSYNC
 PE11.Locked=true
-PE11.PinAttribute=Appli
+PE11.PinAttribute=Boot
 PE11.Signal=LTDC_VSYNC
 PE12.GPIOParameters=GPIO_Label,PinAttribute
 PE12.GPIO_Label=SPI_CLK
@@ -572,17 +566,17 @@ PE6.Signal=SPI4_MOSI
 PF0.GPIOParameters=GPIO_Label,PinAttribute
 PF0.GPIO_Label=LCD_RGB_R2
 PF0.Locked=true
-PF0.PinAttribute=Appli
+PF0.PinAttribute=Boot
 PF0.Signal=LTDC_R2
 PF10.GPIOParameters=GPIO_Label,PinAttribute
 PF10.GPIO_Label=LCD_RGB_R1
 PF10.Locked=true
-PF10.PinAttribute=Appli
+PF10.PinAttribute=Boot
 PF10.Signal=LTDC_R1
 PF11.GPIOParameters=GPIO_Label,PinAttribute
 PF11.GPIO_Label=LCD_RGB_B0
 PF11.Locked=true
-PF11.PinAttribute=Appli
+PF11.PinAttribute=Boot
 PF11.Signal=LTDC_B0
 PF12.GPIOParameters=GPIO_Label,PinAttribute
 PF12.GPIO_Label=UCPD1_ISENSE
@@ -597,7 +591,7 @@ PF14.Signal=ADC2_INP6
 PF15.GPIOParameters=GPIO_Label,PinAttribute
 PF15.GPIO_Label=LCD_RGB_G1
 PF15.Locked=true
-PF15.PinAttribute=Appli
+PF15.PinAttribute=Boot
 PF15.Signal=LTDC_G1
 PF5.GPIOParameters=GPIO_Label,PinAttribute
 PF5.GPIO_Label=CAMERA_PWR_EN
@@ -607,7 +601,7 @@ PF5.Signal=GPIO_Output
 PF7.GPIOParameters=GPIO_Label,PinAttribute
 PF7.GPIO_Label=LCD_RGB_G0
 PF7.Locked=true
-PF7.PinAttribute=Appli
+PF7.PinAttribute=Boot
 PF7.Signal=LTDC_G0
 PF8.GPIOParameters=GPIO_Label,PinAttribute
 PF8.GPIO_Label=SPI_CS
@@ -617,17 +611,17 @@ PF8.Signal=GPIO_Output
 PF9.GPIOParameters=GPIO_Label,PinAttribute
 PF9.GPIO_Label=LCD_RGB_R0
 PF9.Locked=true
-PF9.PinAttribute=Appli
+PF9.PinAttribute=Boot
 PF9.Signal=LTDC_R0
 PG0.GPIOParameters=GPIO_Label,PinAttribute
 PG0.GPIO_Label=LCD_RGB_R7
 PG0.Locked=true
-PG0.PinAttribute=Appli
+PG0.PinAttribute=Boot
 PG0.Signal=LTDC_R7
 PG1.GPIOParameters=GPIO_Label,PinAttribute
 PG1.GPIO_Label=LCD_RGB_R6
 PG1.Locked=true
-PG1.PinAttribute=Appli
+PG1.PinAttribute=Boot
 PG1.Signal=LTDC_R6
 PG11.GPIOParameters=GPIO_Label,PinAttribute
 PG11.GPIO_Label=RMII_TX_EN
@@ -642,12 +636,12 @@ PG12.Signal=I2S6_SDI
 PG13.GPIOParameters=GPIO_Label,PinAttribute
 PG13.GPIO_Label=LCD_CLK
 PG13.Locked=true
-PG13.PinAttribute=Appli
+PG13.PinAttribute=Boot
 PG13.Signal=LTDC_CLK
 PG14.GPIOParameters=GPIO_Label,PinAttribute
 PG14.GPIO_Label=LCD_RGB_B1
 PG14.Locked=true
-PG14.PinAttribute=Appli
+PG14.PinAttribute=Boot
 PG14.Signal=LTDC_B1
 PG15.GPIOParameters=GPIO_Label,PinAttribute
 PG15.GPIO_Label=LCD_BL_CTRL
@@ -657,7 +651,7 @@ PG15.Signal=GPIO_Output
 PG2.GPIOParameters=GPIO_Label,PinAttribute
 PG2.GPIO_Label=LCD_HSYNC
 PG2.Locked=true
-PG2.PinAttribute=Appli
+PG2.PinAttribute=Boot
 PG2.Signal=LTDC_HSYNC
 PG3.GPIOParameters=GPIO_Label,PinAttribute
 PG3.GPIO_Label=DCMI_HSYNC
@@ -737,7 +731,6 @@ PN0.GPIO_Label=OCTOSPI_DQS
 PN0.Locked=true
 PN0.PinAttribute=Boot
 PN0.Signal=XSPIM_P2_DQS0
-PN1.Locked=true
 PN10.GPIOParameters=GPIO_Label,PinAttribute
 PN10.GPIO_Label=OCTOSPI_IO6
 PN10.Locked=true
@@ -791,7 +784,6 @@ PN9.GPIO_Label=OCTOSPI_IO5
 PN9.Locked=true
 PN9.PinAttribute=Boot
 PN9.Signal=XSPIM_P2_IO5
-PO0.Locked=true
 PO2.GPIOParameters=GPIO_Label,PinAttribute
 PO2.GPIO_Label=HEXASPI_DQS0
 PO2.Locked=true
@@ -912,7 +904,7 @@ ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=App-0x200,Boot-0x200,ExtMemLoader-0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
-ProjectManager.LibraryCopy=1
+ProjectManager.LibraryCopy=2
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
@@ -927,7 +919,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-true-Boot,2-MX_GPIO_Init-GPIO-false-HAL-true-Boot,3-MX_SBS_Init-SBS-false-HAL-true-Boot,4-MX_XSPI2_Init-XSPI2-false-HAL-true-Boot,5-MX_UART4_Init-UART4-false-HAL-true-Boot,1-SystemClock_Config-RCC-false-HAL-true-Appli,2-MX_GPIO_Init-GPIO-false-HAL-true-Appli,0-MX_CORTEX_M7_BOOT_Init-CORTEX_M7_BOOT-false-HAL-true-Boot,0-MX_CORTEX_M7_APPLI_Init-CORTEX_M7_APPLI-false-HAL-true-Appli,1-SystemClock_Config-RCC-false-HAL-true-ExtMemLoader
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-true-Boot,2-MX_GPIO_Init-GPIO-false-HAL-true-Boot,false-3-MX_XSPI2_Init-XSPI2-false-HAL-true-Boot,4-MX_UART4_Init-UART4-false-HAL-true-Boot,false-5-MX_XSPI1_Init-XSPI1-false-HAL-true-Boot,false-6-MX_LPTIM1_Init-LPTIM1-false-HAL-true-Boot,1-SystemClock_Config-RCC-false-HAL-true-Appli,2-MX_GPIO_Init-GPIO-false-HAL-true-Appli,0-MX_CORTEX_M7_BOOT_Init-CORTEX_M7_BOOT-false-HAL-true-Boot,0-MX_CORTEX_M7_APPLI_Init-CORTEX_M7_APPLI-false-HAL-true-Appli,1-SystemClock_Config-RCC-false-HAL-true-ExtMemLoader
 RCC.ADCFreq_Value=400000000
 RCC.ADFFreq_Value=300000000
 RCC.AHB1234Freq_Value=300000000
@@ -945,30 +937,30 @@ RCC.CortexFreq_Value=600000000
 RCC.CpuClockFreq_Value=600000000
 RCC.DIVM1=10
 RCC.DIVM2=6
-RCC.DIVM3=4
+RCC.DIVM3=8
 RCC.DIVN1=250
 RCC.DIVN2=200
-RCC.DIVN3=25
+RCC.DIVN3=200
 RCC.DIVP1=1
 RCC.DIVP1Freq_Value=600000000
 RCC.DIVP2Freq_Value=400000000
-RCC.DIVP3Freq_Value=75000000
+RCC.DIVP3Freq_Value=300000000
 RCC.DIVQ1Freq_Value=300000000
 RCC.DIVQ2=4
 RCC.DIVQ2Freq_Value=200000000
 RCC.DIVQ3=20
-RCC.DIVQ3Freq_Value=7500000
+RCC.DIVQ3Freq_Value=30000000
 RCC.DIVR1Freq_Value=300000000
 RCC.DIVR2Freq_Value=400000000
-RCC.DIVR3=1
-RCC.DIVR3Freq_Value=150000000
+RCC.DIVR3=20
+RCC.DIVR3Freq_Value=30000000
 RCC.DIVS1Freq_Value=300000000
 RCC.DIVS2=4
 RCC.DIVS2Freq_Value=200000000
-RCC.DIVS3Freq_Value=75000000
+RCC.DIVS3Freq_Value=300000000
 RCC.DIVT1Freq_Value=300000000
 RCC.DIVT2Freq_Value=400000000
-RCC.DIVT3Freq_Value=75000000
+RCC.DIVT3Freq_Value=300000000
 RCC.DTSFreq_Value=32768
 RCC.ETH1CLockSelection=RCC_ETH1REFCLKSOURCE_HSE
 RCC.ETH1Freq_Value=24000000
@@ -985,7 +977,7 @@ RCC.LPTIM1Freq_Value=150000000
 RCC.LPTIM23Freq_Value=150000000
 RCC.LPTIM45Freq_Value=150000000
 RCC.LPUART1Freq_Value=150000000
-RCC.LTDCFreq_Value=150000000
+RCC.LTDCFreq_Value=30000000
 RCC.MCO1PinFreq_Value=64000000
 RCC.MCO2PinFreq_Value=600000000
 RCC.OSPI1Freq_Value=200000000
@@ -998,7 +990,7 @@ RCC.PPRE1=RCC_APB1_DIV2
 RCC.PPRE2=RCC_APB2_DIV2
 RCC.PPRE4=RCC_APB4_DIV2
 RCC.PPRE5=RCC_APB5_DIV2
-RCC.PSSIFreq_Value=150000000
+RCC.PSSIFreq_Value=30000000
 RCC.RTCFreq_Value=32000
 RCC.SAI1Freq_Value=300000000
 RCC.SAI2Freq_Value=300000000
@@ -1018,18 +1010,15 @@ RCC.USART1Freq_Value=150000000
 RCC.USART234578Freq_Value=150000000
 RCC.USBOFSFreq_Value=48000000
 RCC.USBPHYCLKSource=RCC_USBPHYCCLKSOURCE_PLL3Q
-RCC.USBPHYFreq_Value=7500000
+RCC.USBPHYFreq_Value=30000000
 RCC.VCO1OutputFreq_Value=600000000
 RCC.VCO2OutputFreq_Value=800000000
-RCC.VCO3OutputFreq_Value=150000000
+RCC.VCO3OutputFreq_Value=600000000
 RCC.VCOInput1Freq_Value=2400000
 RCC.VCOInput2Freq_Value=4000000
-RCC.VCOInput3Freq_Value=6000000
+RCC.VCOInput3Freq_Value=3000000
 RCC.Xspi1ClockSelection=RCC_XSPI1CLKSOURCE_PLL2S
 RCC.Xspi2ClockSelection=RCC_XSPI2CLKSOURCE_PLL2S
-SBS.IPParameters=XSPIM1,XSPIM2
-SBS.XSPIM1=Enable
-SBS.XSPIM2=Enable
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.GPXTI14.0=GPIO_EXTI14
@@ -1040,8 +1029,6 @@ SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
-VP_SBS_VS-SBS.Mode=SBS
-VP_SBS_VS-SBS.Signal=SBS_VS-SBS
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_XSPI1_VS_dual.Mode=single_mode
